<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:title="@string/home"
        android:icon="@drawable/ic_home" />
    <item
        android:id="@+id/latestWeatherFragment"
        android:title="@string/latest"
        android:icon="@drawable/ic_latest" />
    <item
        android:id="@+id/forecastFragment"
        android:title="@string/forecast"
        android:icon="@drawable/ic_forecast" />
    <item
        android:id="@+id/favoritesFragment"
        android:title="@string/favorites"
        android:icon="@drawable/ic_favorites" />
    <item
        android:id="@+id/settingsFragment"
        android:title="@string/settings"
        android:icon="@drawable/ic_settings" />
</menu>